src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/types/unliftable-macro-type.tessla
@liftable
def f(x: Int, y: Events[Int]) := ()

@liftable
def g(f: (Int) => Int) := ()